feat: include step definition classes from imported packages